# Nanotrack_Atlas200I_Inference

./: .gitignore  README.md
inc/: ACNNModel_B.hpp  ACNNModel_N.hpp  nanotrack.hpp
model/: nanotrack_backbone_127.om  nanotrack_backbone_255.om  nanotrack_head.om
scripts/: build.sh  run.sh
src/: ACNNModel_B.cpp  ACNNModel_N.cpp  CMakeLists.txt  main.cpp  nanotrack.cpp
